--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: George Day
 
 # Short bio or description (displayed in the header)
-description: A Random Alien
+description: A Random Alien!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatarfiles.alphacoders.com/958/95880.jpg
