--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,9 @@
 #
 
 # Name of your site (displayed in the header)
-name: DaMaster531
-
+name: George Day
 # Short bio or description (displayed in the header)
-description: A Random Alien!
+description: A HUman (Hopefully)
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatarfiles.alphacoders.com/958/95880.jpg
