--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 #
 
 # Name of your site (displayed in the header)
-name: George Day
+name: me
 # Short bio or description (displayed in the header)
-description: A HUman (Hopefully)
+description: me
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatarfiles.alphacoders.com/958/95880.jpg
@@ -25,7 +25,7 @@ footer-links:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
