--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 #
 
 # Name of your site (displayed in the header)
-name: me
+name: George Day
 # Short bio or description (displayed in the header)
-description: me
+description: A random person on the internet
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatarfiles.alphacoders.com/958/95880.jpg
